# AI-Teacher

./: .gitignore  ARCHITECTURE.md  AUTH.md  CASE_STUDY.md  CASE_STUDY_AR.md  Dockerfile  LIBRARY.md  RAG.md  README.md  TEACHER.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup_infra.sh  test.db
.github/workflows/: main.yml
alembic/: env.py  script.py.mako
app/: config.py  main.py  tasks.py
app/api/: academic.py  admin.py  auth.py  chat.py  exam.py  flashcards.py  ingest.py  summarize.py
app/core/: audit.py  cache.py  celery_worker.py  database.py  hashing.py  limiter.py  logging.py  qdrant_db.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  academic.py  academics.py  chat.py  db.py  exam.py  requests.py  responses.py  user.py
app/rag/: chunker.py  embeddings.py  loader.py  prompt.py  retriever.py
app/repository/: book_repository.py  user_repository.py
app/schemas/: academic.py  chat.py  user.py
app/services/: academic_service.py  book_processing_service.py  chat_service.py  exam_service.py  firestore_service.py  llm_service.py  qdrant_service.py  user_service.py
app/tests/: test_main.py
flutter_app/: pubspec.yaml
flutter_app/lib/: app.dart  main.dart
microservices/: .env.example  MICROSERVICES.md  MIGRATION.md  MIGRATION_GUIDE.md  docker-compose.yml
microservices/api-gateway/: main.py  requirements.txt
microservices/auth-service/: entrypoint.sh  main.py  requirements.txt
tests/: conftest.py  test_academic.py  test_admin.py  test_api.py  test_chat.py  test_hardened_api.py
(+198 files in other folders)
